# GalEngine

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  README.zh-CN.md  electron-builder.yml  index.html  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  tsconfig.main.json  vite.config.ts
cli/: __init__.py  main.py  package.py
docs/: index.html
docs/en/: developer_guide.md  llm_prompt.md
docs/ja/: developer_guide.md  llm_prompt.md
docs/zh-CN/: developer_guide.md  llm_prompt.md
editor/: desktop_app.py
editor_js/: __init__.py  index.html
editor_js/css/: editor.css
editor_js/js/: editor.js
editor_qt/: __init__.py  asset_manager.py  compile_manager.py  flowchart_editor.py  generate_placeholders.py  layout_editor.py  main.py  main_window.py  preview_manager.py  project_panel.py  property_panel.py  run_editor_qt.bat  scene_editor.py  settings_sync.py  timeline_panel.py  toolbar.py
editor_ts/: ARCHITECTURE.md  README.md  package-lock.json  package.json
editor_ts/scripts/: build-package.ps1
examples/: README.en.md  README.ja.md  README.zh-CN.md
galengine/: __init__.py
galengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
resources/: entitlements.mac.plist
schemas/: gpk-format-spec.en.md  gpk-format-spec.ja.md  gpk-format-spec.zh-CN.md  markdown-script-spec.en.md  markdown-script-spec.ja.md  markdown-script-spec.zh-CN.md  scene.schema.json  settings.schema.json  ui-layout.schema.json
scripts/: build-package.ps1  generate-icon.py
src/: global.d.ts  main.ts  preload.ts  renderer.tsx
tests/: test_dialogue_system.py  test_integration.py  test_save_manager.py  test_scene_manager.py
(+108 files in other folders)
