[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galengine"
version = "0.1.0"
description = "A visual novel / galgame development engine"
readme = "README.md"
license = { text = "Apache-2.0 OR Commercial" }
requires-python = ">=3.10"
authors = [
    { name = "GalEngine Contributors" }
]
keywords = ["visual-novel", "galgame", "game-engine", "vn-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pygame-ce>=2.5.0",
    "click>=8.1.0",
    "jsonschema>=4.20.0",
    "markdown>=3.5.0",
    "Pillow>=10.0.0",
    "pywebview>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "pyinstaller>=6.0",
]

[project.scripts]
galengine-cli = "cli.main:cli"
galengine-editor = "editor.desktop_app:main"

[project.urls]
Homepage = "https://github.com/Unk1ndledAC/GalEngine"
Documentation = "https://github.com/Unk1ndledAC/GalEngine#documentation"
Repository = "https://github.com/Unk1ndledAC/GalEngine"

[tool.setuptools.packages.find]
include = ["galengine*", "cli*", "editor*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
